@@ -237,79 +237,5 @@ public class Rank extends GenericCommandAutoService implements
             }
 
         }
-
-        if (msg.equals(_listener.getCommandPrefix() + "failed")) {
-
-			User user;
-			try {
-	            user = _listener.getIRCConfig().lookupUser(msgc.getSource());
-	        } catch (NoSuchUserException e) {
-				_listener.sayChannel(msgc.getDest(), 
-						ReplacerUtils.jprintf("ident.noident", env, SiteBot.class));
-				return;
-	        }
-			env.add("ftpuser",user.getName());
-
-			if (!_listener.getIRCConfig().checkIrcPermission(_listener.getCommandPrefix() + "failed",user)) {
-				_listener.sayChannel(msgc.getDest(), 
-						ReplacerUtils.jprintf("ident.denymsg", env, SiteBot.class));
-				return;				
-			}
-
-            String lookupuser;
-            try {
-                lookupuser = msgc.getMessage().substring((_listener.getCommandPrefix() + "failed").length());
-            } catch (ArrayIndexOutOfBoundsException e) {
-                lookupuser = user.getName();
-            } catch (StringIndexOutOfBoundsException e) {
-                lookupuser = user.getName();
-            }
-
-            Collection<User> users = null;
-            try {
-                users = getConnectionManager().getGlobalContext().getUserManager().getAllUsers();
-            } catch (UserFileException e) {
-                getConnection().sendCommand(
-                        new MessageCommand(msgc.getDest(),
-                                "Error processing userfiles"));
-                return;
-            }
-            String type = "MONTHUP";
-            String failed = "";
-            ArrayList<User> users2 = new ArrayList<User>(users);
-            Collections.sort(users2, new UserComparator(type));
-            int limit = Integer.parseInt(ReplacerUtils.jprintf("top.limit",
-                    env, Rank.class));
-            int i = 0;
-            User checkuser = null;
-            for (Iterator iter = users.iterator(); iter.hasNext();) {
-                i = i + 1;
-                checkuser = (User) iter.next();
-                String upped = Bytes.formatBytes(checkuser
-                        .getUploadedBytesMonth());
-                String userc = checkuser.getName();
-
-                String exemptgroups = ReplacerUtils.jprintf("top.exempt", env,
-                        Rank.class);
-                StringTokenizer st = new StringTokenizer(exemptgroups, " ");
-                boolean exempted = false;
-                while (st.hasMoreTokens()) {
-                    if (checkuser.isMemberOf(st.nextToken())) {
-                        i = i - 1;
-                        exempted = true;
-                        break;
-                    }
-                }
-
-                if (i > limit && !exempted) {
-                    failed += userc + " (" + upped + ") - ";
-                }
-            }
-
-            _listener.sayChannel(msgc.getDest(), failed);
-
-        }
-
     }
-
 }
