@@ -19,30 +19,3 @@ files.offline.filename=${ofilename}-OFFLINE
 
 #Tags: mfilename
 files.missing.filename=${mfilename}-MISSING
-
-
-#Tags: artist, album, title, genre, year 
-cwd.id3info.text=\
-????????????????????????????????????????????????????????????????????????????????\n\
-?                                                                              ?\n\
-?                               m p 3   i n f o                                ?\n\
-?                                                                              ?\n\
-????????????????????????????????????????????????????????????????????????????????\n\
-\ \ ? Artist: ${artist,-24.24}  ? Genre :  ${genre,-27.27} ?\n\
-\ \ ? Album : ${album,-24.24}  ? Year  :  ${year,-27.27} ?\n\
-\ \ ????????????????????????????????????????????????????????????????????????????
-
-cwd.racestats.header= \
-????????????????????????????????????????????????????????????????????????????????\n\
-?                                                                              ?\n\
-?                             r a c e   s t a t s                              ?\n\
-?                                                                              ?\n\
-????????????????????????????????????????????????????????????????????????????????
-cwd.racers.header   = ?    --- Users ---                    ?       ?         ?            ?         ?
-cwd.racers.body     = ?  #${position,-2} ${user,-15} @ ${group,-12} ? ${files,4}F ? ${bytes,7} ? ${speed,10} ? ${percent,7} ?
-cwd.racers.footer   = ????????????????????????????????????????????????????????????????????????????????
-cwd.groups.header   = ?   --- Groups ---                    ?       ?         ?            ?         ? 
-cwd.groups.body     = ?  #${position,-2} ${group,-30} ? ${files,4}F ? ${bytes,7} ? ${speed,10} ? ${percent,7} ?
-cwd.groups.footer   = ????????????????????????????????????????????????????????????????????????????????
-cwd.totals.body     = ?                              TOTALS ? ${totalfiles,4}F ? ${totalbytes,7} ? ${totalspeed,10} ? ${totalpercent,7} ?
-cwd.racestats.footer= ????????????????????????????????????????????????????????????????????????????????
